revised the URI scheme; collapsed advanced into quickstart; changed to sentence-case for headers.

--- a/deliver-elda/src/main/webapp/index.html
+++ b/deliver-elda/src/main/webapp/index.html
@@ -23,17 +23,14 @@ pre
 <p>
 See
 <a href="docs/index.html">the quick start document</a> for how to
-get started, or 
-<a href="docs/advanced.html">the configuration instructions</a>
-for how to configure Elda with different LDA specification files.
+get started.
 </p>
 
 <p>
 If you are looking at this page from a running Elda demonstration,
 you can look at the
-<a href="exec/api/education/api/schools.json"><b>education</b> built-in example</a>.
+<a href="api/education/schools.json"><b>education</b> built-in example</a>.
 </p>
-
 
 </body>
 </html>
