--- a/lda/src/main/resources/textlike/html-wrapper.html
+++ b/lda/src/main/resources/textlike/html-wrapper.html
@@ -9,6 +9,14 @@
 	{ background-color: pink
 	}
 	
+h1 
+	{ background: #9ecae1
+    ; padding-left: 1ex
+    ; padding-right: 1ex
+    ; border-radius: 5px
+    ; -moz-border-radius: 5px
+	}
+	
 .one-item
 	{ background-color: #eeeeff
 	; border: 1px solid gray
