improved endpoint metadata rendering.

--- a/lda/src/main/resources/textlike/html-wrapper.html
+++ b/lda/src/main/resources/textlike/html-wrapper.html
@@ -6,37 +6,46 @@
    
 <style>
 .paging-links 
-	{ background-color: pink
-	}
-	
+  { background-color: pink
+  }
+  
 h1 
-	{ background: #9ecae1
+  { background: #9ecae1
     ; padding-left: 1ex
     ; padding-right: 1ex
     ; border-radius: 5px
     ; -moz-border-radius: 5px
-	}
-	
+  }
+  
 .one-item
-	{ background-color: #eeeeff
-	; border: 1px solid gray
-	; margin-bottom: 2ex
-	}
-	
+  { background-color: #eeeeff
+  ; border: 1px solid gray
+  ; margin-bottom: 2ex
+  }
+  
 .body-style
-	{ background-color: #eeeeee
-	}
-	
+  { background-color: #eeeeee
+  }
+  
 td
-	{ margin-right: 1ex 
-	}
-	
+  { margin-right: 1ex 
+  }
+  
+.literal
+  { background-color: #ffffcc
+  }
+    
+.keyword
+  { color: brown
+  ; font-weight: bold
+  }
+    
 .zebra tr:nth-child(2n+1) 
-	{ background: #ffffee }
+  { background: #ffffee }
 
 .zebra tr:nth-child(2n) 
-	{ background: #ffeeff }
-	
+  { background: #ffeeff }
+  
 </style>
 
 </head>
