metadata display now shows siblings. Updated gold results for TestAPI.

--- a/lda/src/main/resources/textlike/html-wrapper.html
+++ b/lda/src/main/resources/textlike/html-wrapper.html
@@ -39,6 +39,10 @@ td
   { color: brown
   ; font-weight: bold
   }
+  
+.link
+  { color: blue 
+  }
     
 .zebra tr:nth-child(2n+1) 
   { background: #ffffee }
