adding some more documentation.

--- a/deliver-elda/src/main/webapp/index.html
+++ b/deliver-elda/src/main/webapp/index.html
@@ -29,7 +29,7 @@ get started.
 <p>
 If you are looking at this page from a running Elda demonstration,
 you can look at the
-<a href="api/education/schools.json"><b>education</b> built-in example</a>.
+<a href="api/education/schools"><b>education</b> built-in example</a>.
 </p>
 
 </body>
