--- a/lda/src/main/resources/textlike/html-wrapper.html
+++ b/lda/src/main/resources/textlike/html-wrapper.html
@@ -4,6 +4,15 @@
    <link rel="stylesheet" type="text/css" href="/sdx-api/styles/style.css" />
    <link rel="stylesheet" type="text/css" href="/styles/style.css" />
    
+<script type="text/javascript">
+
+function toggle(id) {
+    var div = document.getElementById( id );
+    div.className = (div.className == "show" ? "hide" : "show")
+}
+
+</script>
+
 <style>
 .paging-links 
   { background-color: pink
@@ -16,6 +25,15 @@ h1
     ; border-radius: 5px
     ; -moz-border-radius: 5px
   }
+
+h2 
+  { background: #9ecae1
+  }
+
+.show { display: block }
+.hide { display: none }
+
+.indent { margin-left: 1ex }
   
 .one-item
   { background-color: #eeeeff
