Added distionary (shortname, range) meta-data.

--- a/lda/src/main/resources/textlike/html-wrapper.html
+++ b/lda/src/main/resources/textlike/html-wrapper.html
@@ -62,11 +62,11 @@ td
   { color: blue 
   }
     
-.zebra tr:nth-child(2n+1) 
-  { background: #ffffee }
+tr:nth-child(2n+1) 
+  { background-color: #eeffee }
 
-.zebra tr:nth-child(2n) 
-  { background: #ffeeff }
+tr:nth-child(2n) 
+  { background-color: #ffeeff }
   
 </style>
 
