--- a/lda/src/main/resources/textlike/html-wrapper.html
+++ b/lda/src/main/resources/textlike/html-wrapper.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<META  http-equiv="Content-Type"content="text/html; charset=UTF-8">
 <title>{$title}</title>
    <link rel="stylesheet" type="text/css" href="/sdx-api/styles/style.css" />
    <link rel="stylesheet" type="text/css" href="/styles/style.css" />
