--- a/lda/src/main/resources/textlike/html-wrapper.html
+++ b/lda/src/main/resources/textlike/html-wrapper.html
@@ -2,8 +2,7 @@
 <head>
 <META  http-equiv="Content-Type"content="text/html; charset=UTF-8">
 <title>{$title}</title>
-   <link rel="stylesheet" type="text/css" href="/sdx-api/styles/style.css" />
-   <link rel="stylesheet" type="text/css" href="/styles/style.css" />
+   <link rel="stylesheet" type="text/css" href="/elda/docs/style.css" />
    
 <script type="text/javascript">
 
