--- a/lda/src/main/resources/textlike/metadescription.html
+++ b/lda/src/main/resources/textlike/metadescription.html
@@ -4,8 +4,7 @@
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
    <title>Metadata description of an endpoint</title>
-   <link rel="stylesheet" type="text/css" href="/sdx-api/styles/style.css" />
-   <link rel="stylesheet" type="text/css" href="/styles/style.css" />
+   <link rel="stylesheet" type="text/css" href="/elda/docs/style.css" />
 </head>
 
 <body>
