Fixed links to fit revised URL orgainisation. Corrected HTML blunder in advanced.html.

--- a/deliver-elda/src/main/webapp/index.html
+++ b/deliver-elda/src/main/webapp/index.html
@@ -22,7 +22,7 @@ pre
 
 <p>
 See
-<a href="docs/index.html">the quick start document</a> for how to
+<a href="elda/lda-assets/docs/index.html">the quick start document</a> for how to
 get started.
 </p>
 
