Added table of available endpoints to index.html.

--- a/deliver-elda/src/main/webapp/index.html
+++ b/deliver-elda/src/main/webapp/index.html
@@ -27,10 +27,83 @@ get started.
 </p>
 
 <p>
-If you are looking at this page from a running Elda demonstration,
-you can look at the
-<a href="api/doc/school"><b>education</b> built-in example</a>.
+If you are looking at this page from a running Elda demonstration
+using the stand-alone jar, you have a collection of endpoints available
+to you.
 </p>
+
+<table width="80%">
+	<tr>
+		<td>tiny games example</td>
+		<td>
+			<a href="lda-assets/specs/hello-world.ttl">hello-world.ttl</a>	
+		</td>
+		<td>
+			<div> <a href="hello/games">hello/games</a> </div>
+		</td>
+	</tr>
+
+
+	<tr>
+		<td>larger games example</td>
+		<td>
+			<a href="lda-assets/specs/hello-again-world.ttl">hello-again-world.ttl</a>	
+		</td>
+		<td>
+			<div> <a href="again/games">again/games</a> </div>
+			<div> <a href="again/publishers">again/publishers</a> </div>
+		</td>
+	</tr>
+
+
+	<tr>
+		<td>tiny education example</td>
+		<td>
+			<a href="lda-assets/specs/tiny-education.ttl">tiny-education.ttl</a>	
+		</td>
+		<td>
+			<div> <a href="tiny/doc/school">tiny/doc/school</a> </div>
+		</td>
+	</tr>
+
+
+	<tr>
+		<td>mini education example</td>
+		<td>
+			<a href="lda-assets/specs/mini-education.ttl">mini-education</a>	
+		</td>
+		<td>
+			<div> <a href="mini/doc/school">mini/doc/school</a> </div>
+			<div> <a href="mini/doc/school/phase/primary">mini/doc/school/phase/primary</a>
+			<div> <a href="mini/doc/school/100855">mini/doc/school/100855</a> </div> </div>
+		</td>
+	</tr>
+
+	<tr>
+		<td>full education example</td>
+		<td>
+			<a href="lda-assets/specs/full-education.ttl">full-education.ttl</a>	
+		</td>
+		<td>
+			<div> <a href="full/doc/school">full/doc/school</a> </div>
+			<div> <a href="full/def">full/def</a> </div>
+			<div> <a href="full/def/school">full/def/school</a> </div>
+			<div> ... </div>
+		</td>
+	</tr>
+
+
+	<tr>
+		<td>old education example [for comparison]</td>
+		<td>
+			<a href="lda-assets/specs/old-education.ttl">old-education.ttl</a>	
+		</td>
+		<td>
+			<div> <a href="old/education/schools/primary">old/education/schools/primary</a> </div>
+		</td>
+	</tr>
+
+</table>
 
 </body>
 </html>
