Example table and styling.

--- a/deliver-elda/src/main/webapp/index.html
+++ b/deliver-elda/src/main/webapp/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
 <title>Elda -- an implementation of the Linked Data API</title>
+<link href="lda-assets/docs/style.css" type="text/css" rel="stylesheet"></link>
+
 <style>
 h1
     { background: #ccccff 
@@ -33,6 +35,13 @@ to you.
 </p>
 
 <table width="80%">
+	<thead>
+		<tr>
+			<th>description</th>
+			<th>config file</th>
+			<th>sample URLs</th>
+		</tr>
+	</thead>
 	<tr>
 		<td>tiny games example</td>
 		<td>
