Tweaked links, made a decision about which link set is in chanrge.

--- a/deliver-elda/src/main/webapp/index.html
+++ b/deliver-elda/src/main/webapp/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 <title>Elda -- an implementation of the Linked Data API</title>
-<link href="lda-assets/docs/style.css" type="text/css" rel="stylesheet"></link>
+<link href="docs/style.css" type="text/css" rel="stylesheet"></link>
+<link href="elda/lda-assets/docs/style.css" type="text/css" rel="stylesheet"></link>
 
 <style>
 h1
@@ -20,18 +21,18 @@ pre
 </style>
 </head>
 <body>
-<h1>Elda -- an implementation of the Linked Data API</h1>
+<h1>Elda &mdash; an implementation of the Linked Data API</h1>
 
 <p>
-See
-<a href="elda/lda-assets/docs/index.html">the quick start document</a> for how to
-get started.
+	You should be reading this page as served by 
+	a running Elda standalone jar. See
+	<a href="elda/lda-assets/docs/index.html">the quick start documentation</a> 
+	for more details of what you can do with Elda.
 </p>
 
 <p>
-If you are looking at this page from a running Elda demonstration
-using the stand-alone jar, you have a collection of endpoints available
-to you.
+	The running standalone jar serves several different
+	LDA endpoints:
 </p>
 
 <table width="80%">
@@ -45,10 +46,10 @@ to you.
 	<tr>
 		<td>tiny games example</td>
 		<td>
-			<a href="lda-assets/specs/hello-world.ttl">hello-world.ttl</a>	
+			<a href="specs/hello-world.ttl">hello-world.ttl</a>	
 		</td>
 		<td>
-			<div> <a href="hello/games">hello/games</a> </div>
+			<div> <a href="elda/hello/games">elda/hello/games</a> </div>
 		</td>
 	</tr>
 
@@ -56,11 +57,11 @@ to you.
 	<tr>
 		<td>larger games example</td>
 		<td>
-			<a href="lda-assets/specs/hello-again-world.ttl">hello-again-world.ttl</a>	
+			<a href="specs/hello-again-world.ttl">hello-again-world.ttl</a>	
 		</td>
 		<td>
-			<div> <a href="again/games">again/games</a> </div>
-			<div> <a href="again/publishers">again/publishers</a> </div>
+			<div> <a href="elda/again/games">elda/again/games</a> </div>
+			<div> <a href="elda/again/publishers">elda/again/publishers</a> </div>
 		</td>
 	</tr>
 
@@ -68,10 +69,10 @@ to you.
 	<tr>
 		<td>tiny education example</td>
 		<td>
-			<a href="lda-assets/specs/tiny-education.ttl">tiny-education.ttl</a>	
+			<a href="specs/tiny-education.ttl">tiny-education.ttl</a>	
 		</td>
 		<td>
-			<div> <a href="tiny/doc/school">tiny/doc/school</a> </div>
+			<div> <a href="elda/tiny/doc/school">elda/tiny/doc/school</a> </div>
 		</td>
 	</tr>
 
@@ -79,24 +80,24 @@ to you.
 	<tr>
 		<td>mini education example</td>
 		<td>
-			<a href="lda-assets/specs/mini-education.ttl">mini-education</a>	
+			<a href="specs/mini-education.ttl">mini-education.ttl</a>	
 		</td>
 		<td>
-			<div> <a href="mini/doc/school">mini/doc/school</a> </div>
-			<div> <a href="mini/doc/school/phase/primary">mini/doc/school/phase/primary</a>
-			<div> <a href="mini/doc/school/100855">mini/doc/school/100855</a> </div> </div>
+			<div> <a href="elda/mini/doc/school">elda/mini/doc/school</a> </div>
+			<div> <a href="elda/mini/doc/school/phase/primary">elda/mini/doc/school/phase/primary</a>
+			<div> <a href="elda/mini/doc/school/100855">elda/mini/doc/school/100855</a> </div> </div>
 		</td>
 	</tr>
 
 	<tr>
 		<td>full education example</td>
 		<td>
-			<a href="lda-assets/specs/full-education.ttl">full-education.ttl</a>	
+			<a href="specs/full-education.ttl">full-education.ttl</a>	
 		</td>
 		<td>
-			<div> <a href="full/doc/school">full/doc/school</a> </div>
-			<div> <a href="full/def">full/def</a> </div>
-			<div> <a href="full/def/school">full/def/school</a> </div>
+			<div> <a href="elda/full/doc/school">elda/full/doc/school</a> </div>
+			<div> <a href="elda/full/def">elda/full/def</a> </div>
+			<div> <a href="elda/full/def/school">elda/full/def/school</a> </div>
 			<div> ... </div>
 		</td>
 	</tr>
@@ -105,10 +106,10 @@ to you.
 	<tr>
 		<td>old education example [for comparison]</td>
 		<td>
-			<a href="lda-assets/specs/old-education.ttl">old-education.ttl</a>	
+			<a href="specs/old-education.ttl">old-education.ttl</a>	
 		</td>
 		<td>
-			<div> <a href="old/education/schools/primary">old/education/schools/primary</a> </div>
+			<div> <a href="elda/old/education/schools/primary">elda/old/education/schools/primary</a> </div>
 		</td>
 	</tr>
 
