Updating documentation with description of the web.xml.

--- a/deliver-elda/src/main/webapp/index.html
+++ b/deliver-elda/src/main/webapp/index.html
@@ -1,119 +1,12 @@
 <html>
 <head>
 <title>Elda -- an implementation of the Linked Data API</title>
-<link href="docs/style.css" type="text/css" rel="stylesheet"></link>
-<link href="elda/lda-assets/docs/style.css" type="text/css" rel="stylesheet"></link>
-
-<style>
-h1
-    { background: #ccccff 
-    }
-
-h2
-    { background: #ccccff
-    ; padding-left: 1px
-    }
-
-pre 
-    { background: #dddddd
-    ; margin-left: 2em
-    }
-</style>
+<meta http-equiv="refresh" content="5;url=http://localhost:8080/elda/lda-assets/docs/index.html" />
 </head>
+
 <body>
 <h1>Elda &mdash; an implementation of the Linked Data API</h1>
 
-<p>
-	You should be reading this page as served by 
-	a running Elda standalone jar. See
-	<a href="elda/lda-assets/docs/index.html">the quick start documentation</a> 
-	for more details of what you can do with Elda.
-</p>
-
-<p>
-	The running standalone jar serves several different
-	LDA endpoints:
-</p>
-
-<table width="80%">
-	<thead>
-		<tr>
-			<th>description</th>
-			<th>config file</th>
-			<th>sample URLs</th>
-		</tr>
-	</thead>
-	<tr>
-		<td>tiny games example</td>
-		<td>
-			<a href="specs/hello-world.ttl">hello-world.ttl</a>	
-		</td>
-		<td>
-			<div> <a href="elda/hello/games">elda/hello/games</a> </div>
-		</td>
-	</tr>
-
-
-	<tr>
-		<td>larger games example</td>
-		<td>
-			<a href="specs/hello-again-world.ttl">hello-again-world.ttl</a>	
-		</td>
-		<td>
-			<div> <a href="elda/again/games">elda/again/games</a> </div>
-			<div> <a href="elda/again/publishers">elda/again/publishers</a> </div>
-		</td>
-	</tr>
-
-
-	<tr>
-		<td>tiny education example</td>
-		<td>
-			<a href="specs/tiny-education.ttl">tiny-education.ttl</a>	
-		</td>
-		<td>
-			<div> <a href="elda/tiny/doc/school">elda/tiny/doc/school</a> </div>
-		</td>
-	</tr>
-
-
-	<tr>
-		<td>mini education example</td>
-		<td>
-			<a href="specs/mini-education.ttl">mini-education.ttl</a>	
-		</td>
-		<td>
-			<div> <a href="elda/mini/doc/school">elda/mini/doc/school</a> </div>
-			<div> <a href="elda/mini/doc/school/phase/primary">elda/mini/doc/school/phase/primary</a>
-			<div> <a href="elda/mini/doc/school/100855">elda/mini/doc/school/100855</a> </div> </div>
-		</td>
-	</tr>
-
-	<tr>
-		<td>full education example</td>
-		<td>
-			<a href="specs/full-education.ttl">full-education.ttl</a>	
-		</td>
-		<td>
-			<div> <a href="elda/full/doc/school">elda/full/doc/school</a> </div>
-			<div> <a href="elda/full/def">elda/full/def</a> </div>
-			<div> <a href="elda/full/def/school">elda/full/def/school</a> </div>
-			<div> ... </div>
-		</td>
-	</tr>
-
-
-	<tr>
-		<td>old education example [for comparison]</td>
-		<td>
-			<a href="specs/old-education.ttl">old-education.ttl</a>	
-		</td>
-		<td>
-			<div> <a href="elda/old/education/schools/primary">elda/old/education/schools/primary</a> </div>
-		</td>
-	</tr>
-
-</table>
-
+<h2>redirecting to the Elda quickstart documentation.</h2>
 </body>
 </html>
