--- a/deliver-elda/src/main/webapp/index.html
+++ b/deliver-elda/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Elda -- an implementation of the Linked Data API</title>
-<meta http-equiv="refresh" content="5;url=http://localhost:8080/elda/lda-assets/docs/index.html" />
+<meta http-equiv="refresh" content="5;url=http://localhost:8080/elda/lda-assets/docs/E1.2.14-index.html" />
 </head>
 
 <body>
