--- a/deliver-elda/src/main/webapp/index.html
+++ b/deliver-elda/src/main/webapp/index.html
@@ -1,12 +1,15 @@
 <html>
 <head>
 <title>Elda -- an implementation of the Linked Data API</title>
-<meta http-equiv="refresh" content="5;url=http://localhost:8080/elda/lda-assets/docs/E1.2.14-index.html" />
 </head>
 
 <body>
 <h1>Elda &mdash; an implementation of the Linked Data API</h1>
 
-<h2>redirecting to the Elda quickstart documentation.</h2>
+<h2>Click the link for the documentation.</h2>
+
+<a href="http://localhost:8080/elda/docs/quickstart">http://localhost:8080/elda/docs/quickstart</a>
+
+
 </body>
 </html>
