added missing suffixes.

--- a/deliver-elda/root/index.html
+++ b/deliver-elda/root/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="2;url=elda"> 
+<meta http-equiv="refresh" content="2;url=http://localhost:8080/elda/docs/E1.2.14-index.html"> 
 </head>
 <body>
     Transferring you to Elda ...
