--- a/deliver-elda/src/main/webapp/index.html
+++ b/deliver-elda/src/main/webapp/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Elda -- an implementation of the Linked Data API</title>
+<meta http-equiv="refresh" content="1;url=http://localhost:8080/elda/lda-assets/docs/quickstart.html">
 </head>
 
 <body>
@@ -8,7 +9,9 @@
 
 <h2>Click the link for the documentation.</h2>
 
-<a href="http://localhost:8080/elda/lda-assets/docs/quickstart.html">http://localhost:8080/elda/lda-assets/docs/quickstart</a>
+<a href="http://localhost:8080/elda/lda-assets/docs/quickstart.html">
+    http://localhost:8080/elda/lda-assets/docs/quickstart.html
+</a>
 
 
 </body>
