--- a/elda-standalone/src/main/webapp/lda-assets/index.html
+++ b/elda-standalone/src/main/webapp/lda-assets/index.html
@@ -8,7 +8,7 @@
 
 <h2>Click the link for the documentation.</h2>
 
-<a href="http://localhost:8080/elda/docs/quickstart.html">http://localhost:8080/elda/docs/quickstart</a>
+<a href="http://elda.googlecode.com/hg/docs/E1.2.23-index.html">http://elda.googlecode.com/hg/docs/E1.2.23-index.html</a>
 
 
 </body>
