Restored proper specs for standalone; removed obsolete large ttl edubase fragment./

--- a/elda-standalone/ROOT/index.html
+++ b/elda-standalone/ROOT/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 	Transferring you to Elda ...
-	<a href="=http://elda.googlecode.com/hg/docs/E1.2.23-index.html">
+	<a href="http://elda.googlecode.com/hg/docs/E1.2.23-index.html">
 		http://elda.googlecode.com/hg/docs/E1.2.23-index.html
 	</a>
 </body>
