--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Elda -- an implementation of the Linked Data API</title>
 <link href="docs/style.css" type="text/css" rel="stylesheet"></link>
-<meta http-equiv="refresh" content="1;url=/E1.2.27/index.html"/>
+<meta http-equiv="refresh" content="1;url=docs/E1.2.27/index.html"/>
 </head>
 <body>
 
