Added bootstrap stylesheet.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
 <head>
 <title>Elda -- an implementation of the Linked Data API</title>
+<link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" />
 <link href="docs/style.css" type="text/css" rel="stylesheet"></link>
 </head>
 <body>
 
 <body>
-<h1>Elda &mdash; an implementation of the Linked Data API</h1>
+<h1>Elda, an implementation of the Linked Data API</h1>
 
 <p>
 	Elda is a Java implementation of the <a href="http://code.google.com/p/linked-data-api/" rel="nofollow">Linked Data API</a>. 
