Fiddled with body margin.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" />
 <link href="docs/style.css" type="text/css" rel="stylesheet"></link>
 </head>
-<body>
+<body style="margin: 1ex">
 
 <body>
 <h1>Elda, an implementation of the Linked Data API</h1>
