--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="margin: 1ex">
 
-<body>
+<body style="margin: 1ex">
 <h1>Elda, an implementation of the Linked Data API</h1>
 
 <p>
