Reorganised paragraphs on landing page.

--- a/index.html
+++ b/index.html
@@ -10,17 +10,12 @@
 <h1>Elda, an implementation of the Linked Data API</h1>
 
 <p>
-	Elda is a Java implementation of the <a href="http://code.google.com/p/linked-data-api/" rel="nofollow">Linked Data API</a>. 
-	Version 1.2.27 (<a href="ReleaseNotes/latest.text" rel="nofollow">ReleaseNotes/latest.text</a>) 
-	was released on 5 December 2013. Maven artifacts are available from 
-	<a href="http://repository.epimorphics.com" rel="nofollow">http://repository.epimorphics.com</a>
-	(groupid com.epimorphics.lda, artifactId and name lda, version 1.2.27). 
-</p>
-
-<p>
-	The Linked Data API provides a configurable way to access RDF data using simple 
-	RESTful URLs that are translated into queries to a SPARQL endpoint. The API developer 
-	(probably you) writes an API spec (in RDF) which specifies how to translate URLs into queries.  
+	Elda is a Java implementation of the 
+	<a href="http://code.google.com/p/linked-data-api/" rel="nofollow">Linked Data API</a>,
+	which provides a configurable way to access RDF data using simple 
+	RESTful URLs that are translated into queries to a SPARQL endpoint. 
+	The API developer (probably you) writes an API spec (in RDF) which 
+	specifies how to translate URLs into queries. 
 </p>
 
 <p>
@@ -29,6 +24,13 @@
 	For documentation on downloading and installing Elda, see the  
 	<a href="docs/E1.2.27/index.html" rel="nofollow">the quickstart documentation</a>; 
 	you can also <a href="docs/E1.2.28/index.html" rel="nofollow">preview documentation from upcoming versions of Elda </a>. 
+</p>
+	
+<p>
+	Elda 1.2.27 (<a href="ReleaseNotes/latest.text" rel="nofollow">ReleaseNotes/latest.text</a>) 
+	was released on 5 December 2013. Maven artifacts are available from 
+	<a href="http://repository.epimorphics.com" rel="nofollow">http://repository.epimorphics.com</a>
+	(groupid com.epimorphics.lda, artifactId and name lda, version 1.2.27). 
 </p>
 
 <p>
