--- a/elda-standalone/src/main/webapp/lda-assets/index.html
+++ b/elda-standalone/src/main/webapp/lda-assets/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-<title>Elda -- an implementation of the Linked Data API</title>
+<title>Elda &mdash; an implementation of the Linked Data API</title>
+<meta http-equiv="refresh" content="1;url=http://epimorphics.github.io/elda/index.html"/>
 </head>
 
 <body>
@@ -8,7 +9,7 @@
 
 <h2>Click the link for the documentation.</h2>
 
-<a href="http://elda.googlecode.com/hg/docs/E1.2.23-index.html">http://elda.googlecode.com/hg/docs/E1.2.23-index.html</a>
+<a href="http://epimorphics.github.io/elda/index.html">http://epimorphics.github.io/elda/index.html</a>
 
 
 </body>
