Added reference to standalone jar.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 	which allow you to experiment with the style of query and get started with building your own configurations. 
 	For documentation on downloading and installing Elda, see the  
 	<a href="docs/E1.2.27/index.html" rel="nofollow">the quickstart documentation</a>; 
-	you can also <a href="docs/E1.2.28/index.html" rel="nofollow">preview documentation from upcoming versions of Elda </a>. 
+	you can also <a href="docs/E1.2.28/index.html" rel="nofollow">preview documentation from upcoming versions of Elda </a>.
+	The current standalone jar is accessible via Maven or you can just download
+	<a href="http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.28-SNAPSHOT/elda-standalone-1.2.28-20131209.102934-1.jar">
+	http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.28-SNAPSHOT/elda-standalone-1.2.28-20131209.102934-1.jar
+	</a>
 </p>
 	
 <p>
