Updated index to refer to the latest (.28) release.

--- a/index.html
+++ b/index.html
@@ -25,16 +25,17 @@
 	<a href="docs/E1.2.27/index.html" rel="nofollow">the quickstart documentation</a>; 
 	you can also <a href="docs/E1.2.28/index.html" rel="nofollow">preview documentation from upcoming versions of Elda </a>.
 	The current standalone jar is accessible via Maven or you can just download
-	<a href="http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.28-SNAPSHOT/elda-standalone-1.2.28-20131209.102934-1.jar">
-	http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.28-SNAPSHOT/elda-standalone-1.2.28-20131209.102934-1.jar
+	<a href="http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.28/elda-standalone-1.2.28.jar">
+	http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.28/elda-standalone-1.2.28.jar
 	</a>
 </p>
 	
 <p>
-	Elda 1.2.27 (<a href="ReleaseNotes/latest.text" rel="nofollow">ReleaseNotes/latest.text</a>) 
-	was released on 5 December 2013. Maven artifacts are available from 
+	Elda 1.2.28 (<a href="ReleaseNotes/latest.text" rel="nofollow">ReleaseNotes/latest.text</a>) 
+	was released on 18th December 2013. Maven artifacts are available from 
 	<a href="http://repository.epimorphics.com" rel="nofollow">http://repository.epimorphics.com</a>
-	(groupid com.epimorphics.lda, artifactId and name lda, version 1.2.27). 
+	(groupid com.epimorphics.lda, artifactId and name lda, version 1.2.28). Functionality has not
+	changed since 1.2.27, but Elda has moved to Github.
 </p>
 
 <p>
