--- a/index.html
+++ b/index.html
@@ -22,20 +22,30 @@
 	Elda is the Epimorphics implementation of the LDA. It comes with some pre-built  examples 
 	which allow you to experiment with the style of query and get started with building your own configurations. 
 	For documentation on downloading and installing Elda, see the  
-	<a href="docs/E1.2.28/index.html" rel="nofollow">the quickstart documentation</a>; 
-	you can also <a href="docs/E1.2.28/index.html" rel="nofollow">preview documentation from upcoming versions of Elda </a>.
+	<a href="docs/E1.2.29/index.html" rel="nofollow">the quickstart documentation</a>; 
+	you can also <a href="docs/E1.2.30/index.html" rel="nofollow">preview documentation from upcoming versions of Elda </a>.
 	The current standalone jar is accessible via Maven or you can just download
-	<a href="http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.28/elda-standalone-1.2.28.jar">
-	http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.28/elda-standalone-1.2.28.jar
+	<a href="http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.29/elda-standalone-1.2.29.jar">
+	http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.29/elda-standalone-1.2.29.jar
 	</a>
 </p>
 	
 <p>
-	Elda 1.2.28 (<a href="ReleaseNotes/latest.text" rel="nofollow">ReleaseNotes/latest.text</a>) 
-	was released on 18th December 2013. Maven artifacts are available from 
+	Elda 1.2.29 (<a href="ReleaseNotes/latest.text" rel="nofollow">ReleaseNotes/latest.text</a>) 
+	was released on 11th February 2014. Maven artifacts are available from 
 	<a href="http://repository.epimorphics.com" rel="nofollow">http://repository.epimorphics.com</a>
-	(groupid com.epimorphics.lda, artifactId and name lda, version 1.2.28). Functionality has not
-	changed since 1.2.28, but Elda has moved to Github.
+	(groupid com.epimorphics.lda, artifactId and name lda, version 1.2.29). 
+</p>
+
+<p>
+	Elda 1.2.29 enables item counting for list endpoints, where the total number of items
+	that would be viewable through the page-sized windows is made available as page
+	metadata (os:totalResults). By default this is off, but it can be configured on 
+	and made optional in the URL.
+</p>
+
+<p>
+	Elda 1.2.28 is a copy of 1.2.27 but moved from Googlecode to Github.
 </p>
 
 <p>
