Add preview documentation for Elda 1.2.31.

--- a/index.html
+++ b/index.html
@@ -22,19 +22,22 @@
 	Elda is the Epimorphics implementation of the LDA. It comes with some pre-built  examples 
 	which allow you to experiment with the style of query and get started with building your own configurations. 
 	For documentation on downloading and installing Elda, see the  
-	<a href="docs/E1.2.29/index.html" rel="nofollow">the quickstart documentation</a>; 
-	you can also <a href="docs/E1.2.30/index.html" rel="nofollow">preview documentation from upcoming versions of Elda </a>.
+	<a href="docs/E1.2.30/index.html" rel="nofollow">the quickstart documentation</a>; 
+	you can also <a href="docs/E1.2.31/index.html" rel="nofollow">preview documentation from upcoming versions of Elda </a>.
 	The current standalone jar is accessible via Maven or you can just download
-	<a href="http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.29/elda-standalone-1.2.29.jar">
-	http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.29/elda-standalone-1.2.29.jar
+	<a href="http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.30/elda-standalone-1.2.30.jar">
+	http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.30/elda-standalone-1.2.30.jar
 	</a>
 </p>
 	
 <p>
-	Elda 1.2.29 (<a href="ReleaseNotes/latest.text" rel="nofollow">ReleaseNotes/latest.text</a>) 
-	was released on 11th February 2014. Maven artifacts are available from 
+	Elda 1.2.30 (<a href="ReleaseNotes/latest.text" rel="nofollow">ReleaseNotes/latest.text</a>) 
+	was released on 20th March 2014. Maven artifacts are available from 
 	<a href="http://repository.epimorphics.com" rel="nofollow">http://repository.epimorphics.com</a>
-	(groupid com.epimorphics.lda, artifactId and name lda, version 1.2.29). 
+	(groupid com.epimorphics.lda, artifactId and name lda, version 1.2.30). 
+	Elda now allows cache expiry times to be attached to properties,
+	endpoints, and APIs, generates <b>Expires:</b> headers appropriately,
+	and respects those expiry times in its internal caches.
 </p>
 
 <p>
