--- a/index.html
+++ b/index.html
@@ -22,25 +22,24 @@
 	Elda is the Epimorphics implementation of the LDA. It comes with some pre-built  examples 
 	which allow you to experiment with the style of query and get started with building your own configurations. 
 	For documentation on downloading and installing Elda, see the  
-	<a href="docs/E1.2.32/index.html" rel="nofollow">the quickstart documentation</a>; 
-	you can also <a href="docs/E1.2.32/index.html" rel="nofollow">preview documentation from upcoming versions of Elda </a>.
+	<a href="docs/E1.2.33/index.html" rel="nofollow">the quickstart documentation</a>; 
+	you can also <a href="docs/E1.2.34/index.html" rel="nofollow">preview documentation from upcoming versions of Elda </a>.
 	The current standalone jar is accessible via Maven or you can just download
-	<a href="http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.32/elda-standalone-1.2.32.jar">
-	http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.32/elda-standalone-1.2.32.jar
+	<a href="http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.33/elda-standalone-1.2.33.jar">
+	http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.33/elda-standalone-1.2.33.jar
 	</a>
 </p>
 
 <p>
-	Elda 1.2.32 was released on 23rd April 2014 (groupid com.epimorphics.lda, artifactId and name lda, version 1.2.32).
+	Elda 1.2.33 was released on 23rd April 2014 (groupid com.epimorphics.lda, artifactId and name lda, version 1.2.33).
 	It corrects a problem with item endpoints which failed to find the requested item but did
-	not generate a 404 response status.
+	not generate a 404 response status. (Version .32 was an intermediate release that incompletely
+	resolved this issue.)
 </p>
 
 <p>
 	Elda 1.2.31 (<a href="ReleaseNotes/latest.text" rel="nofollow">ReleaseNotes/latest.text</a>) 
-	was released on 24th March 2014. Maven artifacts for Elda 1.2.32 are available from 
-	<a href="http://repository.epimorphics.com" rel="nofollow">http://repository.epimorphics.com</a>
-	(groupid com.epimorphics.lda, artifactId and name lda, version 1.2.32).
+	was released on 24th March 2014.
 	Elda now allows cache expiry times to be attached to properties,
 	endpoints, and APIs, generates <b>Expires:</b> headers appropriately,
 	and respects those expiry times in its internal caches.
