--- a/index.html
+++ b/index.html
@@ -22,12 +22,19 @@
 	Elda is the Epimorphics implementation of the LDA. It comes with some pre-built  examples 
 	which allow you to experiment with the style of query and get started with building your own configurations. 
 	For documentation on downloading and installing Elda, see the  
-	<a href="docs/E1.2.34/index.html" rel="nofollow">the quickstart documentation</a>; 
-	you can also <a href="docs/E1.2.34/index.html" rel="nofollow">preview documentation from upcoming versions of Elda </a>.
+	<a href="docs/E1.2.35/index.html" rel="nofollow">the quickstart documentation</a>; 
+	you can also <a href="docs/E1.2.36/index.html" rel="nofollow">preview documentation from upcoming versions of Elda </a>.
 	The current standalone jar is accessible via Maven or you can just download
-	<a href="http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.34/elda-standalone-1.2.34.jar">
-	http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.34/elda-standalone-1.2.34.jar
+	<a href="http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.35/elda-standalone-1.2.35.jar">
+	http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.35/elda-standalone-1.2.35.jar
 	</a>
+</p>
+
+<p>
+    Elda 1.2.35 was released on 30th July 2014
+	(groupid com.epimorphics.lda, artifactId and name lda, version 1.2.35).
+	See <a href="ReleaseNotes/latest.text" rel="nofollow">ReleaseNotes/latest.text</a>
+	for more details.
 </p>
 
 <p>
@@ -56,19 +63,6 @@
 	endpoints, and APIs, generates <b>Expires:</b> headers appropriately,
 	and respects those expiry times in its internal caches.
 </p>
-
-<p>
-	Elda 1.2.30, released on 20th March 2014, contains a serious item-counting/cache
-       	error and should not be used; it is replaced by Elda 1.2.32.
-</p>
-
-<p>
-	Elda 1.2.29 enables item counting for list endpoints, where the total number of items
-	that would be viewable through the page-sized windows is made available as page
-	metadata (os:totalResults). By default this is off, but it can be configured on 
-	and made optional in the URL.
-</p>
-
 
 </body>
 </html>
