Added sync'ed copy of current release, and pointed to it from index.html

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 <h1>Elda, an implementation of the Linked Data API</h1>
 
 <p>
-	Elda is a Java implementation of the 
-	<a href="http://code.google.com/p/linked-data-api/" rel="nofollow">Linked Data API</a>,
-	which provides a configurable way to access RDF data using simple 
-	RESTful URLs that are translated into queries to a SPARQL endpoint. 
-	The API developer (probably you) writes an API spec (in RDF) which 
-	specifies how to translate URLs into queries. 
+	Elda is a Java implementation of the
+	<a href="http://code.google.com/p/linked-data-api/">Linked Data API</a>,
+	which provides a configurable way to access RDF data using simple
+	RESTful URLs that are translated into queries to a SPARQL endpoint.
+	The API developer (probably you) writes an API spec (in RDF) which
+	specifies how to translate URLs into queries.
 </p>
 
 <p>
-	Elda is the Epimorphics implementation of the LDA. It comes with some pre-built  examples 
-	which allow you to experiment with the style of query and get started with building your own configurations. 
-	For documentation on downloading and installing Elda, see the  
-	<a href="docs/E1.2.35/index.html" rel="nofollow">the quickstart documentation</a>; 
-	you can also <a href="docs/E1.2.36/index.html" rel="nofollow">preview documentation from upcoming versions of Elda </a>.
+	Elda is the Epimorphics implementation of the LDA. It comes with some pre-built  examples
+	which allow you to experiment with the style of query and get started with building your own configurations.
+	For documentation on downloading and installing Elda, see the
+	<a href="current/index.html">the quickstart documentation</a>;
+	you can also <a href="docs/E1.2.36-SNAPSHOT/index.html">preview documentation from upcoming versions of Elda </a>.
 	The current standalone jar is accessible via Maven or you can just download
 	<a href="http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.35/elda-standalone-1.2.35.jar">
 	http://repository.epimorphics.com/com/epimorphics/lda/elda-standalone/1.2.35/elda-standalone-1.2.35.jar
@@ -33,19 +33,19 @@
 <p>
     Elda 1.2.35 was released on 30th July 2014
 	(groupid com.epimorphics.lda, artifactId and name lda, version 1.2.35).
-	See <a href="ReleaseNotes/latest.text" rel="nofollow">ReleaseNotes/latest.text</a>
+	See <a href="ReleaseNotes/latest.text">ReleaseNotes/latest.text</a>
 	for more details.
 </p>
 
 <p>
 	Elda 1.2.34 was released on 8th July 2014
-	(groupid com.epimorphics.lda, artifactId and name lda, version 1.2.33). 
+	(groupid com.epimorphics.lda, artifactId and name lda, version 1.2.33).
 	The default XSLT processer has been changed to Saxon 9.5.1-5. The mapping
 	from strings to resource names for XSLT tenplates and the Velocity root has
 	been made the same and is more precisely defined. It is now possible to
 	specify on an endpoint or in a request URI the name of a non-default graph
 	in the SPARQL endpoint's dataset.
-	See <a href="ReleaseNotes/latest.text" rel="nofollow">ReleaseNotes/latest.text</a>
+	See <a href="ReleaseNotes/latest.text">ReleaseNotes/latest.text</a>
 	for more details.
 </p>
 
@@ -57,7 +57,7 @@
 </p>
 
 <p>
-	Elda 1.2.31 (<a href="ReleaseNotes/latest.text" rel="nofollow">ReleaseNotes/latest.text</a>) 
+	Elda 1.2.31 (<a href="ReleaseNotes/latest.text">ReleaseNotes/latest.text</a>)
 	was released on 24th March 2014.
 	Elda now allows cache expiry times to be attached to properties,
 	endpoints, and APIs, generates <b>Expires:</b> headers appropriately,
