Updated documentation links to point to the new current-page documentation.

--- a/elda-common/src/main/webapp/index.html
+++ b/elda-common/src/main/webapp/index.html
@@ -37,7 +37,7 @@ files.
 <p>
 You can also read the quickstart documentation for the
 <code>elda-standalone</code> jar:
-<a href="http://elda.googlecode.com/hg/deliver-elda/src/main/webapp/lda-assets/docs/quickstart.html">
+<a href="https://epimorphics.github.io/elda/current">
 quickstart</a>, an alternative way of getting started with Elda.
 </p>
 
