--- a/elda-standalone/ROOT/index.html
+++ b/elda-standalone/ROOT/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="2;url=http://elda.googlecode.com/hg/docs/E1.2.23-index.html"> 
+<meta http-equiv="refresh" content="2;url=https://epimorphics.github.io/elda/current"> 
 </head>
 <body>
 	Transferring you to Elda ...
-	<a href="http://elda.googlecode.com/hg/docs/E1.2.23-index.html">
-		http://elda.googlecode.com/hg/docs/E1.2.23-index.html
+	<a href="https://epimorphics.github.io/elda/current">
+		https://epimorphics.github.io/elda/current
 	</a>
 </body>
 </html>
