--- a/elda-standalone/src/main/webapp/index.html
+++ b/elda-standalone/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Elda -- an implementation of the Linked Data API</title>
-<meta http-equiv="refresh" content="1;url=http://elda.googlecode.com/hg/docs/E1.2.23-index.html">
+<meta http-equiv="refresh" content="1;url=https://epimorphics.github.io/elda/current">
 </head>
 
 <body>
@@ -9,8 +9,8 @@
 
 <h2>Click the link for the documentation.</h2>
 
-<a href="http://elda.googlecode.com/hg/docs/E1.2.23-index.html">
-    http://elda.googlecode.com/hg/docs/E1.2.23-index.html
+<a href="https://epimorphics.github.io/elda/current">
+    https://epimorphics.github.io/elda/current
 </a>
 
 
